Fix Mobile About Page spacing (#214)
* Fix Mobile About Page spacing

* Fix Mobile About Page spacing

* Fix Mobile About Page spacing

* Fix Names

--- a/client/src/pages/AboutPage/index.scss
+++ b/client/src/pages/AboutPage/index.scss
@@ -2,13 +2,13 @@
   font-size: 5em;
   font-weight: bold;
   color: black;
-  padding: 20px;
+  padding: 5%;
 }
 
 .about-us-text {
-  font-size: 30px;
-  padding-left: 300px;
-  padding-right: 300px;
+  font-size: 2em;
+  padding-left: 20%;
+  padding-right: 20%;
 }
 
 .about-us-body {
@@ -22,12 +22,12 @@
 .about-us-body-parts {
   padding-top: 25px;
   color: black;
-  padding-left: 350px;
-  padding-right: 350px;
+  padding-left: 27.5%;
+  padding-right: 27.5%;
 }
 
 .about-us-body-top {
-  font-size: 30px;
+  font-size: 1.75em;
   padding-bottom: 10px;
   text-align: left;
   color: black;
@@ -35,7 +35,7 @@
 
 .about-us-body-middle {
   text-align: left;
-  font-size: 20px;
+  font-size: 1.2em;
   color: black;
   border-bottom: 1px solid gray;
   padding-bottom: 25px;
@@ -43,7 +43,7 @@
 
 .about-us-body-last {
   text-align: left;
-  font-size: 20px;
+  font-size: 1.2em;
   color: black;
   padding-bottom: 25px;
 }
